# clog

./: .gitignore  CMakeLists.txt  clog.c  clog.h  main.c  readme.md  settings.cmake  xlog.c  xlog.h
cmake/: ClogConfig.cmake
inc/: clog.h
src/: clog.c  clog_msvc.c
test/: CMakeLists.txt  main.c
